--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <section id="galeri">
         <h2>Galeri</h2>
         <p>Foto-foto kegiatan sekolah:</p>
-        <img src="assets/foto1.jpg" alt="Foto Kegiatan 1">
-        <img src="assets/foto2.jpg" alt="Foto Kegiatan 2">
+        <img src="assets/foto1.gif">
+        <img src="assets/foto2.gif">
+         <img src="assets/foto3.gif">
         <!-- Tambahkan gambar lebih banyak -->
     </section>
     
