--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HAPPY VALENTINE DAYY<3 </title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-        header { background-color: #007bff; color: white; text-align: center; padding: 20px; }
+        header { background-color: #d2b0d0; color: white; text-align: center; padding: 20px; }
         nav { background-color: #333; color: white; padding: 10px; text-align: center; }
         nav a { color: white; margin: 0 15px; text-decoration: none; }
         section { padding: 20px; max-width: 800px; margin: auto; background: white; margin-top: 20px; border-radius: 8px; }
