--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
          <img src="assets/foto3.gif">
         <!-- Tambahkan gambar lebih banyak -->
     </section>
+
+    <section id="STEM">
+        <h2>STEM</h2>
+        <img src="assets/foto5.jpg">
+        <img src="assets/foto6.jpg">
+        <img src="assets/foto7.jpg">
+
+     </section>
     
     <script>
         // Script sederhana untuk smooth scroll (opsional)
