--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     
     <section id="bebeh">
         <img src="assets/foto1.gif">
-        <img src="assets/foto2.jpg">
+        <img src="assets/foto2.gif">
          <img src="assets/foto3.gif">
+         <img src="assets/foto4.gif">
+         <img src="assets/foto5.gif">
         <!-- Tambahkan gambar lebih banyak -->
     </section>
 
