--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="assets/foto1.gif">
         <img src="assets/foto2.gif">
          <img src="assets/foto3.gif">
-         <img src="assets/foto4.gif">
+         <img src="assets/4.gif">
          <img src="assets/5.gif">
         <img src="assets/6.gif">
         <img src="assets/7.gif">
