--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="assets/7.gif">
         <img src="assets/8.gif">
         <img src="assets/9.gif">
-        <img src="assets/10.gif">
+        <img src="assets/sepuluh.gif">
         <img src="assets/11.gif">
         <img src="assets/12.gif">
         <img src="assets/13.gif">
