--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
         <!-- Tambahkan gambar lebih banyak -->
     </section>
 
+
+    <section id="bebeh">
+    <img src="assets/19.jpg">
+        <!-- Tambahkan gambar lebih banyak -->
+    </section>
+
     
     
     <script>
