--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
      <section id="bebeh">
         <h2>makasii banyakk udahh ngasihh  hadiah buat akuu, maaff belumm bisa kasih lebihh</h2>
         <p>Foto-foto kegiatan sekolah:</p>
-        <img src="assets/foto1.jpg" alt="Foto Kegiatan 1">
-        <img src="assets/foto2.jpg" alt="Foto Kegiatan 2">
+        <img src="assets/bebeh.jpg"
         <!-- Tambahkan gambar lebih banyak -->
     </section>
 
