--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
 
 
-     <section id="bebeh">
+     <section id="sayang">
         <h2>makasii banyakk udahh ngasihh  hadiah buat akuu, maaff belumm bisa kasih lebihh</h2>
         <img src="assets/bebeh.jpg"
             <img src="assets/bebeh1.jpg"
