--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -42,11 +43,28 @@
         #sayang img:hover {
             transform: scale(1.05);
         }
+        /* Gambar tambahan untuk mobile */
+        .mobile-extra {
+            display: none;
+            margin-top: 10px;
+            width: 150px; /* Sesuaikan ukuran */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+        .mobile-extra:hover {
+            transform: scale(1.05);
+        }
+        @media (max-width: 768px) {
+            .mobile-extra {
+                display: block;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>HAPPY VALENTINE DAYY SHAAKYLAAA SAYANGGGGGGGGG</h1>
+        <h1>HAPPY VALENTINE DAYY SHAKYLAAAAAA SAYANGGGG</h1>
         <p>LOAFFYUUUUUUUUUUUUUUU<3</p>
     </header>
     
@@ -89,6 +107,7 @@
             </div>
             <img src="assets/bebeh4.jpg" alt="Bebeh 4" class="side">
         </div>
+        <img src="assets/bebeh5.jpg" alt="Bebeh 5" class="mobile-extra">
         <!-- Tambahkan gambar lebih banyak jika diperlukan -->
     </section>
 
