--- a/index.html
+++ b/index.html
@@ -19,19 +19,10 @@
         }
         /* Kolase untuk section sayang */
         #sayang .collage {
-            display: flex;
-            align-items: start;
-            gap: 20px;
-        }
-        #sayang .grid-2x2 {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(2, 1fr);
             gap: 10px;
-            flex: 1;
-        }
-        #sayang .side {
-            flex: 0 0 auto;
-            width: 150px; /* Sesuaikan ukuran jika perlu */
+            margin-bottom: 20px;
         }
         #sayang img {
             width: 100%;
@@ -43,28 +34,11 @@
         #sayang img:hover {
             transform: scale(1.05);
         }
-        /* Gambar tambahan untuk mobile */
-        .mobile-extra {
-            display: none;
-            margin-top: 10px;
-            width: 150px; /* Sesuaikan ukuran */
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-        }
-        .mobile-extra:hover {
-            transform: scale(1.05);
-        }
-        @media (max-width: 768px) {
-            .mobile-extra {
-                display: block;
-            }
-        }
     </style>
 </head>
 <body>
     <header>
-        <h1>HAPPY VALENTINE DAYY SHAKYLAAAAAA SAYANGGGG</h1>
+        <h1>HAPPY VALENTINE DAYY BAILALLL</h1>
         <p>LOAFFYUUUUUUUUUUUUUUU<3</p>
     </header>
     
@@ -99,15 +73,12 @@
      <section id="sayang">
         <h2>makasii banyakk udahh ngasihh  hadiah buat akuu, maaff belumm bisa kasih lebihh</h2>
         <div class="collage">
-            <div class="grid-2x2">
-                <img src="assets/bebeh.jpg" alt="Bebeh">
-                <img src="assets/bebeh1.jpg" alt="Bebeh 1">
-                <img src="assets/bebeh2.jpg" alt="Bebeh 2">
-                <img src="assets/bebeh3.jpg" alt="Bebeh 3">
-            </div>
-            <img src="assets/bebeh4.jpg" alt="Bebeh 4" class="side">
+            <img src="assets/bebeh.jpg" alt="Bebeh">
+            <img src="assets/bebeh1.jpg" alt="Bebeh 1">
+            <img src="assets/bebeh2.jpg" alt="Bebeh 2">
+            <img src="assets/bebeh3.jpg" alt="Bebeh 3">
         </div>
-        <img src="assets/bebeh5.jpg" alt="Bebeh 5" class="side">
+        <img src="assets/bebeh5.jpg" alt="Bebeh 5">
         <!-- Tambahkan gambar lebih banyak jika diperlukan -->
     </section>
 
