--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         <!-- Tambahkan gambar lebih banyak jika diperlukan -->
     </section>
 
+     <section id="WILL YU">
+        <h2>STEM</h2>
+    </section>
+
     
     
     <script>
