--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         // Fungsi untuk polling
         function showResult() {
             const resultDiv = document.getElementById('result');
-            resultDiv.innerHTML = 'Yay! I love you so much! 💖';
+            resultDiv.innerHTML = 'YEYYYY, ILOAFFFFFYUUU SO MUCHHH, KAMUU PENYEMANGATT AKUUU, MAKASIII SAYANGGG 💖';
             resultDiv.style.display = 'block';
         }
     </script>
