--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         section { padding: 20px; max-width: 800px; margin: auto; background: white; margin-top: 20px; border-radius: 8px; }
         footer { text-align: center; padding: 10px; background-color: #333; color: white; }
         img { max-width: 100%; height: auto; }
+        #bebeh img {
+            display: block;
+            margin: 0 auto;
+        }
         /* Kolase untuk section sayang */
         #sayang .collage {
             display: grid;
@@ -55,26 +59,6 @@
             color: #d2b0d0;
             display: none;
         }
-        /* Layout untuk section bebeh: 9 kiri, 9 kanan */
-        #bebeh {
-            display: flex;
-            justify-content: space-between;
-            gap: 20px;
-        }
-        #bebeh .left, #bebeh .right {
-            flex: 1;
-        }
-        #bebeh img {
-            display: block;
-            margin: 10px auto;
-            width: 100%;
-            max-width: 300px; /* Sesuaikan ukuran jika perlu */
-        }
-        @media (max-width: 768px) {
-            #bebeh {
-                flex-direction: column;
-            }
-        }
     </style>
 </head>
 <body>
@@ -89,28 +73,25 @@
     </section>
     
     <section id="bebeh">
-        <div class="left">
-            <img src="assets/foto1.gif">
-            <img src="assets/foto2.gif">
-            <img src="assets/foto3.gif">
-            <img src="assets/4.gif">
-            <img src="assets/5.gif">
-            <img src="assets/6.gif">
-            <img src="assets/7.gif">
-            <img src="assets/8.gif">
-            <img src="assets/9.gif">
-        </div>
-        <div class="right">
-            <img src="assets/sepuluh.gif">
-            <img src="assets/11.gif">
-            <img src="assets/12.gif">
-            <img src="assets/13.gif">
-            <img src="assets/14.gif">
-            <img src="assets/15.gif">
-            <img src="assets/16.gif">
-            <img src="assets/17.gif">
-            <img src="assets/18.gif">
-        </div>
+        <img src="assets/foto1.gif">
+        <img src="assets/foto2.gif">
+         <img src="assets/foto3.gif">
+         <img src="assets/4.gif">
+         <img src="assets/5.gif">
+        <img src="assets/6.gif">
+        <img src="assets/7.gif">
+        <img src="assets/8.gif">
+        <img src="assets/9.gif">
+        <img src="assets/sepuluh.gif">
+        <img src="assets/11.gif">
+        <img src="assets/12.gif">
+        <img src="assets/13.gif">
+        <img src="assets/14.gif">
+        <img src="assets/15.gif">
+        <img src="assets/16.gif">
+        <img src="assets/17.gif">
+        <img src="assets/18.gif">
+        <!-- Tambahkan gambar lebih banyak -->
     </section>
 
 
@@ -150,7 +131,7 @@
         // Fungsi untuk polling
         function showResult() {
             const resultDiv = document.getElementById('result');
-            resultDiv.innerHTML = 'Yay! I love you so much! 💖';
+            resultDiv.innerHTML = 'YEYYYY, ILOAFFFFFYUUU SO MUCHHH, KAMUU PENYEMANGATT AKUUU, MAKASIII UDAHHH NGESUPPORTT AKUU SAMPAIIIII DII TITIKK INIII, MAKASIIIIIII BANYAKKKKKKKKKK SAYANGGG 💖';
             resultDiv.style.display = 'block';
         }
     </script>
